# PCSystem

./: CMakeLists.txt  LICENSE  consumidor.cpp  produtor.cpp
pcsystem/: pcsystem.cpp  pcsystem.hpp
src/: consumidor.cpp  produtor.cpp  shared.cpp  shared.hpp
src/pcsystem/: pcsystem.hpp
